--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -1,36 +1,38 @@
 
-<div class="container banner">
-  
+<div class="container banner card border-0 shadow my-5">
     <form #loginform="ngForm" >
-      <div class="form-group">
+      <div class="form-group" >
 
         <span style="text-align: center;"><h1>Registration</h1></span>
       </div>
         <div class="form-group">
-          <label class="control-label col-sm-2" for="email" >Email:</label>
-          <div class="col-sm-10">          
+          <label class="control-label" for="email" >Email:</label>
+          <div class="row">          
             <input type="email" class="form-control" placeholder="Enter email" name="email" [(ngModel)]="user.email" required>
           </div>
         </div>
       <div class="form-group">
-        <label class="control-label col-sm-2" for="userName">Username:</label>
-        <div class="col-sm-10">
+        <label class="control-label" for="userName">Username:</label>
+        <div class="row">
           <input type="email" class="form-control" placeholder="Enter Username" name="email"  [(ngModel)]="user.userName" required>
         </div>
       </div>
       <div class="form-group">
-        <label class="control-label col-sm-2" for="pwd" >Password:</label>
-        <div class="col-sm-10">          
+        <label class="control-label" for="pwd" >Password:</label>
+        <div class="row">          
           <input type="password" class="form-control" placeholder="Enter Password" name="pwd" [(ngModel)]="user.password" required>
         </div>
       </div>
      
+      <div class="row" style="text-align: center;">
+        <small class="text-danger"><span>{{msg}}</span></small>
+        <br>
+      </div>
       
       <div class="form-group">        
-        <div class="col-sm-offset-4 col-sm-10" >
-          <button type="submit" class="btn btn-info float-left" [disabled]="!loginform.form.valid" (click)="registerUser()">Register</button>
+        <div class="row" >
+          <button type="submit" class="btn btn-block btn-info float-left" [disabled]="!loginform.form.valid" (click)="registerUser()">Register</button>
         </div>
-        
       </div>
     </form>
     
